# gst-plugins-gles

./: .gitignore  AUTHORS  Makefile.am  NEWS  autogen.sh  configure.ac
data/: Makefile.am  copy.glsh  copy.glsl  deint_linear.glsh  deint_linear.glsl  vertex.glsh  vertex.glsl
src/: Makefile.am  gstglesplugin.c  gstglesplugin.h  gstglessink.c  gstglessink.h  shader.c  shader.h
